Add new Activity.

--- a/serialport/local.properties
+++ b/serialport/local.properties
@@ -2,6 +2,8 @@
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
-#
-#Sat Jun 22 22:21:40 CST 2019
+# For customization when using a Version Control System, please read the
+# header note.
+#Sat Jul 13 10:59:29 CST 2019
+ndk.dir=D\:\\android_studio\\sdk\\ndk-bundle
 sdk.dir=D\:\\android_studio\\sdk
